--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS for styling -->
-    <link rel="stylesheet" href="/style/styles.css">
+    <link rel="stylesheet" href="style/styles.css">
 
 </head>
 
@@ -43,7 +43,7 @@
         <div class="container">
             <div class="profile animate__animated animate__fadeIn">
                 <!-- Image with hover zoom effect -->
-                <img src="/img/JeanImg.jpeg" alt="Jean's Profile" class="profile-img img-fluid rounded-circle mb-4 hover-zoom">
+                <img src="img/JeanImg.jpeg" alt="Jean's Profile" class="profile-img img-fluid rounded-circle mb-4 hover-zoom">
                 <h1 class="display-4">Jean Arby Putra</h1>
                 <p class="lead">- Junior Programmer -</p>
             </div>
@@ -79,23 +79,23 @@ Copy
             <div class="skills-wrapper">
                 <div class="skills-grid">
                     <div class="skill">
-                        <img src="/img/html5.svg" alt="HTML Logo" class="skill-icon mb-3">
+                        <img src="img/html5.svg" alt="HTML Logo" class="skill-icon mb-3">
                         <p>HTML</p>
                     </div>
                     <div class="skill">
-                        <img src="/img/nodejs.svg" alt="Node.js Logo" class="skill-icon mb-3">
+                        <img src="img/nodejs.svg" alt="Node.js Logo" class="skill-icon mb-3">
                         <p>Node.js</p>
                     </div>
                     <div class="skill">
-                        <img src="/img/php.svg" alt="PHP Logo" class="skill-icon mb-3">
+                        <img src="img/php.svg" alt="PHP Logo" class="skill-icon mb-3">
                         <p>PHP</p>
                     </div>
                     <div class="skill">
-                        <img src="/img/java.svg" alt="Java Logo" class="skill-icon mb-3">
+                        <img src="img/java.svg" alt="Java Logo" class="skill-icon mb-3">
                         <p>Java</p>
                     </div>
                     <div class="skill">
-                        <img src="/img/kotlin.svg" alt="Kotlin Logo" class="skill-icon mb-3">
+                        <img src="img/kotlin.svg" alt="Kotlin Logo" class="skill-icon mb-3">
                         <p>Kotlin</p>
                     </div>
                     <!-- Tambahkan skill lainnya sesuai kebutuhan -->
@@ -143,7 +143,7 @@ Copy
                 <!-- Project 2 -->
                 <div class="col-md-4 mb-4">
                     <div class="card">
-                        <img src="/img/attendify-logo.png" alt="Attendify Logo" class="card-img-top">
+                        <img src="img/attendify-logo.png" alt="Attendify Logo" class="card-img-top">
                         <div class="card-body">
                             <h5 class="card-title"><a href="https://github.com/JeaAP/Attendify" target="_blank">Attendify</a></h5>
                             <p class="card-text">An Android application for attendance management, built with Kotlin and Android SDK.</p>
