--- a/index.html
+++ b/index.html
@@ -166,19 +166,19 @@
             <div class="row justify-content-center">
                 <div class="col-md-3 text-center">
                     <i class="fas fa-envelope fa-3x mb-3"></i>
-                    <p><a href="mailto:jean@example.com" class="text-white">jean@example.com</a></p>
+                    <p><a href="mailto:jeanarby030108@gmail.com" class="text-white">Email Me</a></p>
                 </div>
                 <div class="col-md-3 text-center">
                     <i class="fab fa-whatsapp fa-3x mb-3"></i>
-                    <p><a href="https://wa.me/yourphonenumber" class="text-white" target="_blank">WhatsApp</a></p>
+                    <p><a href="https://wa.me/+6282113387838" class="text-white" target="_blank">WhatsApp Me</a></p>
                 </div>
                 <div class="col-md-3 text-center">
                     <i class="fab fa-instagram fa-3x mb-3"></i>
-                    <p><a href="https://www.instagram.com/jean" class="text-white" target="_blank">Instagram</a></p>
+                    <p><a href="https://www.instagram.com/arb_yp" class="text-white" target="_blank">Direct Message Me</a></p>
                 </div>
                 <div class="col-md-3 text-center">
                     <i class="fab fa-github fa-3x mb-3"></i>
-                    <p><a href="https://github.com/JeaAP" class="text-white" target="_blank">GitHub</a></p>
+                    <p><a href="https://github.com/JeaAP" class="text-white" target="_blank">My GitHub</a></p>
                 </div>
             </div>
         </div>
